Prevents the tab pointer from doing an horizontal scrollbar

--- a/styles/_tabs.less
+++ b/styles/_tabs.less
@@ -14,6 +14,7 @@
     display: flex;
 
     flex: none;
+    overflow: hidden;
 }
 
 .nitro-tab-pointer {
